@@ -215,7 +215,7 @@ PET_OBJ = [[0,"No Pet",0,0]
 ,[11,"Goblin Leader [Physical Damage against Demi-Human Race +3%]",0,37,3,0]
 ,[12,"Succubus [5% to get 5% of the Physical Damage dealt in each attack]","",0]
 ,[13,"Savage Babe [VIT +1, MHP +50]",0,3,1,13,50,0]
-,[14,"Zealotus [Physical/Magical Damage on Demi-Human Race+2%]",0,37,2,177,2,0]
+,[14,"Zherlthsh [MATK +2%, Magical Damage against Demi-Human +2%]",0,89,2,177,2,0]
 ,[15,"Steel Chonchon [FLEE +6, AGI -1]",0,9,6,2,-1,0]
 ,[16,"Spore [HIT +5 ,ATK -2]",0,8,5,17,-2,0]
 ,[17,"Smokie [AGI +1, Perfect Dodge +1]",0,2,1,11,1,0]
@@ -243,7 +243,7 @@ PET_OBJ = [[0,"No Pet",0,0]
 ,[39,"Mao Guai [MSP +10]",0,14,10,0]
 ,[40,"Munak [INT +1, DEF +1]",0,4,1,18,1,0]
 ,[41,"Medusa [VIT +1, Stone Curse Resistance +5%]",0,3,1,159,5,0]
-,[42,"Rice Cake [Neutral Resistance +1%, MHP -1%]",0,50,1,15,-1,0]
+,[42,"Rice Cake [Neutral Resistance +1%]",0,60,1,0]
 ,[43,"Yoyo [CRIT +3,LUK -1]",0,10,3,6,-1,0]
 ,[44,"Leaf Cat [Brute Resistance +3%]",0,52,3,0]
 ,[45,"Lunatic [CRIT +2, ATK +2]",0,10,2,17,2,0]
@@ -268,6 +268,74 @@ PET_OBJ = [[0,"No Pet",0,0]
 ,[63,"Zipper Bear [ATK +10]",0,17,10,0]
 ,[64,"Zhu Po Long [Increase damage against Plant and Formless by 3%]",0,30,3,33,3,0]
 ,[65,"Woodie  [VIT +3, Increases effectiveness of your Heal, Sanctuary and Potion Pitcher by 5%]",0,3,3,91,5,94,5,0]
+//[Custom TalonRO - 2018-06-04 - Evolved Pets] [Kato]
+,[66,"Alicel [DEF +1, Demi-Human Resistance +1%]",0,18,1,57,1,0]
+,[67,"Am Mut [MATK +2%]",0,89,2,0]
+,[68,"Bradium Golem [MHP +250, FLEE +10]",0,13,250,9,10,0]
+,[69,"Choco [ASPD +3%]",0,12,3,0]
+,[70,"Condor [STR +3, ATK +6]",0,1,3,17,6,0]
+,[71,"Desert Wolf [INT +2, MSP +100]",0,4,2,14,100,0]
+,[72,"Draco [VIT +1, MDEF +1, ASPD +2%]",0,3,1,19,1,12,2,0]
+,[73,"Evil Marionette [MHP+50, MSP+10, HP & SP Recovery +10%]",0,13,50,14,10,76,-10,75,-10,0]
+,[74,"Giant Whisper [FLEE +10, Perfect Dodge +1]",0,9,10,11,1,0]
+,[75,"Grand Peco [MHP +500, MSP +25]",0,13,500,14,25,0]
+,[76,"High Orc [ATK +2%]",0,80,2,0]
+,[77,"Jaguar [ASPD +5%]",0,12,5,0]
+,[78,"Savage [MHP +300, VIT +5]",0,13,500,3,5,0]
+,[79,"Yao Jun [INT+1, VIT+1, DEF+1, MDEF+1, MHP+150, MSP+10]",0,4,1,3,1,18,1,19,1,13,150,14,10,0]
+//[Custom TalonRO - 2018-06-04 - New Pets] [Kato]
+,[80,"Mini Ice Titan [ASPD +1%. Chance to Freeze enemy when doing physical attakcs]",0,12,1,0] // Not freeze
+,[81,"Aqua Elemental [ASPD +1%, Water Resistance +2%]",0,12,1,61,2,0]
+,[82,"Bathory [VIT +1, Shadow Resistance +3%]",0,3,1,67,3,0]
+,[83,"Beary Punny Bear [FLEE +5, STR +1, INT +1, DEX +1]",0,9,5,1,1,4,1,5,1,0]
+,[84,"Blue Unicorn [INT +1, Holy Resistance +2%]",0,4,1,66,2,0]
+,[85,"Chepet [LUK +1, Holy Resistance +2%]",0,6,1,66,2,0]
+,[86,"Cornus [ASPD +2%, ATK -1%]",0,12,2,80,-1,0]
+,[87,"Domovoi [AGI +2]",0,2,2,0]
+,[88,"Dumpling Child [Neutral Resistance +1%]",0,60,1,0]
+,[89,"Eggyra [AGI +3]",0,2,3,0]
+,[90,"Ferus [Increase damage against Dragon by 5% & Undead by 2%]",0,59,5,51,5,0]
+,[91,"Freezer [STR +1, Water Resistance 2%]",0,1,1,61,2,0]
+,[92,"Garden Keeper [INT +1, AGI +1, Holy Resistance +2%]",0,4,1,2,1,66,2,0]
+,[93,"Galapago [AGI +2, LUK +4 if equipped with Galapago Cap]",0,2,2,0]
+,[94,"Gibbet [Perfect Dodge +1, AGI +2, Shadow Resistance +1%]",0,11,1,2,1,67,1,0]
+,[95,"Hell Poodle [DEF +1, VIT +2, Shadow Resistance +1%]",0,18,1,67,1,0]
+,[96,"Hylozoist [LUK +2, Ghost Resistance +2%]",0,6,2,68,2,0]
+,[97,"Little Poring [LUK +2, CRIT +1]",0,6,2,10,1,0]
+,[98,"Lude [INT +2, Ghost Resistance +2%]",0,4,2,68,2,0]
+,[99,"Mavka [Earth Resistance +2%, Damage against Fire Monsters +1%]",0,62,2,40,1,43,1,0]
+,[100,"Mermaid [INT +1, DEX +1]",0,4,1,5,1,0]
+,[101,"Pandaring [VIT +2, INT +4 if equipped with Panda Hat]",0,3,2,0]
+,[102,"Pouring [STR +2]",0,1,2,0]
+,[103,"Sedora [LUK +2]",0,6,2,0]
+,[104,"Snow Bunny [ASPD +1%, DEX +1]",0,12,1,5,1,0]
+,[105,"Snowier [ASPD +1%, STR +1]",0,12,1,1,1,0]
+,[106,"Teddy Bear [VIT +2]",0,3,2,0]
+,[107,"Tiyanak [STR +1, LUK +1, Shadow Resistance +2%]",0,1,1,6,1,61,2,0]
+,[108,"Chung E [DEF +1, Demi-Human Resistance +1%]",0,18,1,57,1,0]
+,[109,"Tiny Agni [Physical/Magical Damage against Fire Monsters +2%]",0,43,2,443,2,0]
+,[110,"Tiny Aqua [Physical/Magical Damage against Water Monsters +2%]",0,41,2,441,2,0]
+,[111,"Tiny Ventus [Physical/Magical Damage against Wind Monsters +2%]",0,44,2,444,2,0]
+,[112,"Agni [Physical/Magical Damage against Fire Monsters +2%, Fire Resistance +2%]",0,43,2,443,2,63,2,0]
+,[113,"Ventus [Physical/Magical Damage against Wind Monsters +2%, Wind Resistance +2%]",0,44,2,444,2,64,2,0]
+,[114,"Eira [Increases effectiveness of your Heal, Sanctuary and Potion Pitcher by 5%, 2% Chance of gaining 5% of the damage inflicted on an enemy as HP]",0,25,5,94,5,245,5,0]
+,[115,"Aqua [Physical/Magical Damage against Water Monsters +2%, Water Resistance +2%]",0,41,2,441,2,61,2,0]
+,[116,"Angry Penguin [Increase effectiveness of your Heal, Sanctuary and Potion Pitcher by 3%]",0,25,3,94,3,245,3,0]
+,[117,"Baby Skoll [[Swordman, Thief, Merchant class] SP Rege. +20%, [Archer, Acolyte, Magician class] HP Rege. +20%, [Extended Class]HP/SP Rege. +10%, Perfect Dodge +3] (not calced)",0,0] //todo
+,[118,"Ballooling [Increases effectiveness of Heal, Sanctuary and Potion Pitcher on yourself by 2%]",0,25,2,94,2,245,2,0] //self?
+,[119,"Jejeling [VIT +2, DEX +4 if equipped with Baseball Cap]",0,3,2,0]
+,[120,"Elephant [Perfect Dodge +2, VIT +3]",0,11,2,3,2,0]
+,[121,"Gorilla [STR +3, VIT +3]",0,1,3,3,2,0]
+,[122,"Lion [FLEE +5, VIT +3]",0,9,5,3,2,0]
+,[123,"Rhino [ATK +5, VIT +3]",0,17,5,3,3,0]
+,[124,"Little Fatum [ASPD +1%, DEX +1]",0,12,1,5,1,0]
+,[125,"Lucky Case [[Mage, Archer, Acolyte Class] MHP +175, Perfect Dodge +1, [Swordman, Merchant, Thief Class] MSP +50, VIT +2] (not calced)",0,0] //todo
+,[126,"Miming [INT +1, VIT +1, Increases effectiveness of your Heal, Sanctuary and Potion Pitcher by 5%]",0,4,1,3,1,25,5,94,5,245,5,0]
+,[127,"Skelion [MHP +250, MDEF +1, ASPD +2%, Ghost Resistance +2%]",0,13,50,19,1,12,2,68,2,0]
+,[128,"Tikbalang [Increase damage to Bakonawa, Bangungot and Buwaya by 10%] (not calced)",0,0]
+,[129,"Toucan [DEX +1, FLEE +5]",0,5,1,9,5,0]
+,[130,"White Goat [+1.5% chance to cast Level 2 Bash when doing a physical attack, Increases the healing value of Carrots by 100%] (not calced)",0,0]
+,[131,"Wild Rider [AGI +2, DEX +3, if equipped with Drooping Cat]",0,2,2,0]
 ];
 
 ITEM_SP_TIME_OBJ =[
