@@ -4356,6 +4356,8 @@ with(document.calcForm){
 		for(i=1;i<=199;i++)
 			A8_Skill7.options[i] = new Option(1+(1*i)+"x",i);
 
+
+
 		myInnerHtml("EN805",'Partymember Count <select name="A8_Skill5" onChange="Click_A8(1)"></select>',0);
 		A8_Skill5.options[0] = new Option("-",0);
 		for(i=1;i<=19;i++)
@@ -5227,9 +5229,10 @@ with(document.calcForm){
 			n_B2[24] = n_B2[23];
 		//custom TalonRO Monster picture!
 		//check also monster.js row 686+687 (MonsterOBJ[i][23] = MonsterOBJ[i][21];)
+		//[Custom TalonRO = 2016-06-04 - Fixed the database link for Panel][Kato]
 		if (MonsterOBJ[B_Enemy.value][23]!=0){
 			document.getElementById("B_Enemy_picture").innerHTML="<img src=\"https://panel.talonro.com/images/monster/"+MonsterOBJ[B_Enemy.value][23]+".gif\" alt=\"no picture available =(\">";
-			document.getElementById("B_Enemy_mobdb").innerHTML="<a href=\"https://panel.talonro.com/mobdb,"+MonsterOBJ[B_Enemy.value][23]+".html\" target=\"_blank\"><b>MobDB</b></a>";
+			document.getElementById("B_Enemy_mobdb").innerHTML="<a href=\"https://panel.talonro.com/mobdb/"+MonsterOBJ[B_Enemy.value][23]+"/\" target=\"_blank\"><b>MobDB</b></a>";
 		} else {
 			document.getElementById("B_Enemy_picture").innerHTML="<img src=\"\" alt=\"no picture available =(\">";
 			document.getElementById("B_Enemy_mobdb").innerHTML="<b>n/a</b>";
