@@ -51,3 +51,7 @@
 - Added some items and variables to Skill.js AutoSpellSkill array to show the correct values as well as comments for a few lines to explain what each object is.; [ZoneSoldier]
 - Changed Electric Guitar stats and removed autospells/spell from object; [ZoneSoldier]
 - Changed the spacing in Head.js for elements to give the proper spacing on the website.; [ZoneSoldier]
+[Update 6/4/2018]
+- Fixed mobdb link to tRO's website; [Kato]
+- Issue #4 Added all Evolved/New Pets(67) and fixed some old ones; [Kato]
+- Issue #8 Fixed the behavior for the combo in Aditional Effects for exp, setted the default Base/Job EXP for 8x; [Kato]
